Added user VO in line wiht UsrInfo table in mdb.

--- a/BasicLogInProject/BasicLogInProject.vbproj
+++ b/BasicLogInProject/BasicLogInProject.vbproj
@@ -107,6 +107,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="VO\UserVo.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmMain.resx">
